<resources>
    <string name="app_name">Image Double Compression</string>
    <string name="compression">Compression</string>
    <string name="decompression">Decompression</string>
    <string name="file_desc">File :</string>
    <string name="size_desc">Size :</string>
    <string name="compress">Compress</string>
    <string name="decompress">Decompress</string>
    <string name="home">Home</string>
    <string name="save">Save</string>
    <string name="not_available">N/A</string>
    <string name="please_init_image">Please initialize your image first.</string>
    <string name="please_wait_a_moments">Please wait a moments…</string>
    <string name="dictionary_file_not_found">Dictionary file is not found.</string>
    <string name="reset">Reset</string>
</resources>
