<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="32dp"
    tools:context=".home.HomeFragment">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/double_default_dimen"
        android:text="@string/app_name"
        android:textSize="28sp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_compression"
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:layout_below="@+id/tv_title"
        android:layout_marginTop="32dp"
        android:text="@string/compression"
        android:textAllCaps="false" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_decompression"
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:layout_below="@+id/tv_title"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="32dp"
        android:text="@string/decompression"
        android:textAllCaps="false" />

</RelativeLayout>
