<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".decompression.DecompressionFragment"
    tools:ignore="ContentDescription">

    <TextView
        android:id="@+id/tv_img_file"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/double_default_dimen"
        android:layout_marginTop="@dimen/double_default_dimen"
        android:text="@string/file_desc"
        app:layout_constraintEnd_toStartOf="@+id/btn_select_image"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_img_size"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/double_default_dimen"
        android:layout_marginTop="@dimen/half_default_dimen"
        android:layout_marginEnd="@dimen/default_dimen"
        android:text="@string/size_desc"
        app:layout_constraintEnd_toStartOf="@+id/btn_select_image"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_img_file" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btn_select_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/double_default_dimen"
        android:src="@drawable/ic_add_image_light"
        app:backgroundTint="@color/design_default_color_primary_dark"
        app:layout_constraintBottom_toBottomOf="@+id/tv_img_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tv_img_file"
        app:tint="@color/white" />

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/btn_decompress"
        android:layout_width="220dp"
        android:layout_height="56dp"
        android:layout_marginTop="@dimen/double_default_dimen"
        android:text="@string/decompress"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/design_default_color_surface"
        app:backgroundTint="@color/design_default_color_primary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_img_size" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/img_card"
        android:layout_width="match_parent"
        android:layout_height="240dp"
        android:layout_marginHorizontal="32dp"
        android:layout_marginVertical="32dp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_decompress"
        app:strokeColor="@color/design_default_color_primary_dark"
        app:strokeWidth="2dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/image"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/btn_clear_image"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_alignParentEnd="true"
                app:backgroundTint="@color/design_default_color_error"
                app:borderWidth="2dp"
                app:elevation="0dp"
                app:fabSize="mini"
                app:rippleColor="@color/design_default_color_primary"
                app:srcCompat="@drawable/ic_close_light"
                app:tint="@color/white" />

        </RelativeLayout>

    </com.google.android.material.card.MaterialCardView>

    <TextView
        android:id="@+id/tv_img_result_size"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="8dp"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_card"
        tools:text="1024kb" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_save_image"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/save"
        android:textAllCaps="false"
        android:visibility="gone"
        app:backgroundTint="@color/design_default_color_primary_variant"
        app:icon="@drawable/ic_save_light"
        app:layout_constraintEnd_toEndOf="@+id/img_card"
        app:layout_constraintTop_toBottomOf="@+id/img_card" />

</androidx.constraintlayout.widget.ConstraintLayout>
